# Progression-Vulkan-Old

./: ..clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  appveyor.yml  luatest.cpp  main.cpp  makefile.template  manager.sh  player.lua  script.lua  script2.lua
cmake/: Progression-base.cmake  Progression.cmake  configuration.h.in  platform_defines.hpp.in
configs/: bouncing_ball.toml  default.toml  default.yaml  example.toml  example.yaml  offline.toml
examples/: CMakeLists.txt  audio_example.cpp  deferred.cpp  deferred_light_vols.cpp  demo.cpp  example.cpp  example1.cpp  example2.cpp  example3.cpp  forward.cpp  image_compressor.cpp  lightDemo.cpp  luaExample.cpp  sceneViewer.cpp  shadow.cpp  tiled.cpp
ext/: cpptoml.h
ext/basis_universal/: CMakeLists.txt  lodepng.cpp
ext/basis_universal/transcoder/: basisu.h
models/: alto_saxophone.mtl  (+1 more)
progression/: CMakeLists.txt  progression.cpp  progression.h  progression.hpp
progression/audio/: audio_file.cpp  audio_file.hpp  audio_source.cpp  audio_source.hpp  audio_system.cpp  audio_system.hpp
progression/components/: animation_component.cpp  animation_component.hpp  entity_metadata.hpp  factory.cpp  factory.hpp  model_renderer.cpp  model_renderer.hpp  model_renderer_component.cpp  model_renderer_component.hpp  script_component.cpp  script_component.hpp  skinned_renderer.hpp  transform.cpp  transform.hpp  user_camera.cpp  user_camera_component.cpp  user_camera_component.h  user_camera_component.hpp
progression/core/: animation_system.cpp  animation_system.hpp  assert.hpp  bounding_box.cpp  bounding_box.h  bounding_box.hpp  camera.cpp  camera.h  camera.hpp  common.cpp  common.h  common.hpp  component.h  component.hpp  config.cpp  config.h  config.hpp  configuration.hpp  core_defines.hpp  ecs.cpp  ecs.hpp  enum_bit_operations.hpp  feature_defines.hpp  frustum.cpp  frustum.h  frustum.hpp  game_object.cpp  game_object.h  game_object.hpp  image.cpp  image.h  image.hpp  input.cpp  input.h  input.hpp  input_types.h  input_types.hpp  lua.cpp  lua.hpp  math.cpp  (+23 more)
progression/graphics/: debug_marker.cpp  debug_marker.hpp  graphics_api.cpp  graphics_api.h  graphics_api.hpp  lights.cpp  lights.h  lights.hpp  material.cpp  material.h  material.hpp  mesh.cpp  mesh.h  mesh.hpp  mesh_render_component.cpp  mesh_render_component.h  mesh_render_component.hpp  mesh_render_subsystem.cpp  mesh_render_subsystem.h  mesh_render_subsystem.hpp  mesh_renderer.cpp  mesh_renderer.h  model.cpp  model.h  model.hpp  model_render_component.cpp  model_render_component.h  model_render_component.hpp  model_render_subsystem.cpp  model_render_subsystem.h  pg_to_opengl_types.cpp  pg_to_opengl_types.hpp  pg_to_vulkan_types.hpp  render_component.cpp  render_component.h  render_component.hpp  render_subsystem.cpp  render_subsystem.h  render_subsystem.hpp  render_system.cpp  (+18 more)
progression/graphics/graphics_api/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  pipeline.cpp  pipeline.hpp  profiling.cpp  profiling.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  synchronization.cpp  synchronization.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  vertex_descriptor.cpp  vertex_descriptor.hpp
progression/graphics/shader_c_shared/: defines.h  lights.h  standard_defines.h  structs.h  texture_defines.h  type_defines.h
progression/resource/: image.cpp  image.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  resource.cpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  resource_version_numbers.hpp  script.cpp  script.hpp  shader.cpp  shader.hpp  skinned_model.cpp  skinned_model.hpp  texture.cpp  texture.hpp  texture2D.cpp  texture2D.hpp
progression/resource/converters/: converter.cpp  converter.hpp  fastfile_converter.cpp  fastfile_converter.hpp  image_converter.cpp  image_converter.hpp  material_converter.cpp  material_converter.hpp  model_converter.cpp  model_converter.hpp  script_converter.cpp  script_converter.hpp  shader_converter.cpp  shader_converter.hpp  texture_converter.cpp  texture_converter.hpp
progression/resource/resourceIO/: image_io.cpp  image_io.hpp  io.hpp  material_io.cpp  material_io.hpp  model_io.cpp  model_io.hpp  shader_io.cpp  shader_io.hpp  texture_io.cpp  texture_io.hpp
progression/src/: OBJ_Loader.cpp  background.cpp  camera.cpp  image.cpp  input.cpp  material.cpp  mesh.cpp  shader.cpp  skybox.cpp  texture.cpp  utils.cpp  window.cpp
progression/src/include/: OBJ_Loader.h  component.h  input.h  lights.h  material.h  model_renderer.h  shader.h  texture.h  transform.h  window.h
progression/types/: lights.h  texture.cpp  texture.h
progression/utils/: config.cpp  config.h  fileIO.hpp  json_parsing.cpp  json_parsing.hpp  logger.cpp  logger.hpp  lz4_compression.cpp  lz4_compression.hpp  noncopyable.hpp  random.cpp  random.hpp  serialize.cpp  serialize.hpp  string.cpp  string.hpp  timestamp.cpp  timestamp.hpp  type_name.hpp
project/: CMakeLists.txt  progression.h  starter.h
project/src/: background.cpp  camera.cpp  game_object.cpp  image.cpp  input.cpp  lights.cpp  material.cpp  mesh_renderer.cpp  model.cpp  model_renderer.cpp  shader.cpp  texture.cpp  transform.cpp  user_camera.cpp  window.cpp
project/src/include/: background.h  camera.h  component.h  game_object.h  image.h  input.h  input_types.h  lights.h  mesh.h  mesh_renderer.h  model.h  model_renderer.h  shader.h  skybox.h  stb_image_write.h  texture.h  transform.h  user_camera.h  utils.h  window.h
templates/newproject/: CMakeLists.txt
templates/newproject/cmake/: configuration.hpp.in
templates/newproject/code/: main.cpp  newproject.cpp  newproject.hpp
templates/newproject/configs/: newproject.toml
templates/newproject/scenes/: scene1.pgscn  scene1Resources.txt
tools/: CMakeLists.txt  bvh.cpp  createFastFile.cpp  objToPGModel.cpp  objToRTModel.cpp
tools/auto_add_image/: CMakeLists.txt  main.cpp
tools/converter/: CMakeLists.txt  main.cpp
(+192 files in other folders)
